kubernetes/testnet/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testnet-casperholders-app
  name: testnet-casperholders-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testnet-casperholders-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: testnet-casperholders-app
        name: testnet-casperholders-app
    spec:
      containers:
        - name: testnet-casperholders-app
          image: killianh/casperholders:testnet-front
          ports:
          - containerPort: 80
          resources: {}
      restartPolicy: Always
