kubernetes/testnet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: testnet-casperholders-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: testnet-casperholders-app
status:
  loadBalancer: {}
